testsuite/tests/typecheck/should_fail/tcfail033.stderr

tcfail033.hs:4:12: error:
    • Couldn't match expected type ‘(a, b)’ with actual type ‘a’
    • In the expression: x
      In the expression: [x | (x, y) <- buglet]
      In an equation for ‘buglet’: buglet = [x | (x, y) <- buglet]
    • Relevant bindings include
        y :: b (bound at tcfail033.hs:4:19)
        x :: a (bound at tcfail033.hs:4:17)
        buglet :: [(a, b)] (bound at tcfail033.hs:4:1)
